test/isabelle/negative-tests/unknown-identifier-tuple.p
module Unknown-identifier-tuple {

  // tuple positional access, projection
  t_21: int = t(1)

}